<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory
        android:title="@string/reminder"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_daily_reminder"
            android:summary="@string/summary_daily_reminder"
            android:title="@string/daily_reminder"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_daily_movie"
            android:summary="@string/summary_daily_movie"
            android:title="@string/daily_movie"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>