<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <group android:menuCategory="container">
        <item
            android:id="@+id/menu_favorite"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/title_favorite"
            app:showAsAction="always" />
        <item
            android:id="@+id/menu_localization"
            android:title="@string/set_localization" />
    </group>

</menu>